--- a/Q2.ipynb
+++ b/Q2.ipynb
@@ -22,8 +22,17 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# Question 2"
+    "%reset -f"
+   ]
+  },
+  {
+   "source": [
+    "# Question 2 - Refraction of Glass"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -70,8 +79,7 @@
    "source": [
     "## Part (a)\n",
     "\n",
-    "Should PCA be carried out on covariance or correlation matrix?\n",
-    "\n",
+    "Should PCA be carried out on covariance or correlation matrix?<br />\n",
     "Explain."
    ],
    "cell_type": "markdown",
@@ -79,7 +87,7 @@
   },
   {
    "source": [
-    "PCA should be carried out on the covariance matrix. `RI` measures the ratio of the velocity of light in a vacuum to its velocity in the objects. On the other hand, `Na`, `Mg`, `Al`, `Si`, `K` and `Ca` measure the proportions of their corresponding oxides in the objects by weight. As `RI` and the 6 other quantitative variables have different scales and measure different things, PCA should be carried out on the covariance matrix instead of the correlation matrix."
+    "PCA should be carried out on the covariance matrix. `RI` measures the ratio of the velocity of light in a vacuum to its velocity in the objects. On the other hand, `Na`, `Mg`, `Al`, `Si`, `K` and `Ca` measure the proportions of their corresponding oxides in the objects by weight. As `RI` and the 6 other quantitative variables have different scales and measure different things, it doesn't make sense to carry out PCA on the correlation matrix. Therefore, PCA should be carried out on the covariance matrix."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -88,10 +96,8 @@
    "source": [
     "## Part (b)\n",
     "\n",
-    "Extract the principal components.\n",
-    "\n",
-    "Justify your decision and interpret the principal components.\n",
-    "\n",
+    "Extract the principal components.<br />\n",
+    "Justify your decision and interpret the principal components.<br />\n",
     "You should include the necessary tables, outputs and graphs."
    ],
    "cell_type": "markdown",
@@ -103,6 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract the quantitative variables from the raw data\n",
     "df_numeric = df.iloc[:,:-1]\n",
     "df_numeric"
    ]
@@ -113,9 +120,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Perform eigendecomposition on covariance matrix\n",
     "pca = PCA(n_components=7).fit(df_numeric)\n",
     "\n",
-    "pca.components_.round(5)"
+    "# View the eigenvectors (row-wise)\n",
+    "pca.components_.round(3)"
    ]
   },
   {
@@ -124,6 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Summarize eigenvalues, eigenvectors and the amount of variance they explain respectively\n",
     "def get_pca_results(pca, col_names, precision: int = 5):\n",
     "\n",
     "    index = [f'PC {i + 1}' for i in range(pca.n_components_)]\n",
@@ -156,7 +166,18 @@
   },
   {
    "source": [
-    "#### Method 1 - Cumulative Explained Variance"
+    "#### Method 1 - Kaiser's Rule\n",
+    "\n",
+    "PCA was not carried out on a covariance matrix, so Kaiser's Rule is not applicable in this case."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "#### Method 2 - Cumulative Explained Variance\n",
+    "\n",
+    "The top 3 PCs explain more than 80% (90%) of the total variance; hence, only the top 3 PCs should be retained."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -178,28 +199,9 @@
   },
   {
    "source": [
-    "#### Method 2 - Eigenvalues\n",
+    "#### Method 3 - Scree Plot\n",
     "\n",
-    "PCA was not carried out on covariance matrix, so Method 2 is not applicable"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def eig_more_1(pca):\n",
-    "#     return pca[pca['Eigenvalue'] >= 1]\n",
-    "# \n",
-    "# eig_more_1(pca_results)"
-   ]
-  },
-  {
-   "source": [
-    "#### Method 3 - Scree Plot"
+    "By the scree plot, there is an elbow at the 4th PC. Therefore, only the top 3 PCs should be kept."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -241,7 +243,9 @@
   },
   {
    "source": [
-    "Both methods 1 and 3 agree that the top 3 Principal Components should be kept"
+    "#### Summary of Principal Component Selection\n",
+    "\n",
+    "Both methods 2 and 3 agree that the top 3 Principal Components should be kept."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -252,23 +256,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_focused_pca(pca, num_of_pcs):\n",
+    "def get_focused_pca_results(pca_results, num_of_pcs):\n",
     "    return pca_results.iloc[:num_of_pcs, 3:]\n",
     "\n",
-    "pca_results_focused = get_focused_pca(pca_results, 3)\n",
+    "pca_results_focused = get_focused_pca_results(pca_results, 3)\n",
     "pca_results_focused"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "### Score Plot\n",
     "\n",
-    "Visualize the transformed"
-   ]
+    "Visualize the transformed points using a 3D scatter plot."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -276,19 +278,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def score_plot(df, pca, labels: Union[pd.Series, None] = None, centre=False):\n",
-    "\n",
-    "    PC1 = df @ pca.loc['PC 1'] if not centre else (df - df.mean(axis=0)) @ pca.loc['PC 1']\n",
-    "    PC2 = df @ pca.loc['PC 2'] if not centre else (df - df.mean(axis=0)) @ pca.loc['PC 2']\n",
-    "    PC3 = df @ pca.loc['PC 3'] if not centre else (df - df.mean(axis=0)) @ pca.loc['PC 3']\n",
+    "def score_plot(df, pca, labels: Union[pd.Series, None] = None):\n",
+    "    \n",
+    "    transformed = pca.transform(df)\n",
+    "    PC1, PC2, PC3 = transformed[:,0], transformed[:,1], transformed[:,2]\n",
     "\n",
     "    fig = px.scatter_3d(x=PC1, y=PC2, z=PC3, color=labels, title='Score Plot', labels={'x': 'PC 1', 'y': 'PC 2', 'z': 'PC 3'}, width=800, height=500)\n",
     "\n",
     "    fig.update_layout(margin=dict(l=30, r=10, t=75, b=20))\n",
     "    return fig\n",
     "\n",
-    "score_plot(df_numeric, pca_results_focused, labels=df['Class'], centre=True).show()"
+    "score_plot(df_numeric, pca, labels=df['Class'])"
    ]
+  },
+  {
+   "source": [
+    "### Loading Plots\n",
+    "\n",
+    "Visualize the loading values using several 1D scatter plots (1 for each PC)."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -296,102 +306,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def score_plot_2(df, pca, labels: Union[pd.Series, None] = None):\n",
-    "    \n",
-    "    transformed = pca.transform(df)\n",
-    "    PC1, PC2, PC3 = transformed[:,:3]\n",
-    "\n",
-    "    # fig = px.scatter_3d(x=PC1, y=PC2, z=PC3, color=labels, title='Score Plot', labels={'x': 'PC 1', 'y': 'PC 2', 'z': 'PC 3'}, width=800, height=500)\n",
-    "\n",
-    "    # fig.update_layout(margin=dict(l=30, r=10, t=75, b=20))\n",
-    "    # return fig\n",
-    "\n",
-    "score_plot_2(df_numeric, pca, labels=df['Class'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def score_plot(df):\n",
-    "#     pc1 = df.loc['PC 1'].iloc[3:]\n",
-    "#     pc2 = df.loc['PC 2'].iloc[3:]\n",
-    "#     pc3 = df.loc['PC 3'].iloc[3:]\n",
-    "#     ax = sns.scatterplot(x=pc1, y=pc2, size=pc3)\n",
-    "#     ax.set(\n",
-    "#         title='Score Plot',\n",
-    "#         ylim=(-1, 1)\n",
-    "#     )\n",
-    "#     ylim = ax.get_ylim()\n",
-    "#     xlim = ax.get_xlim()\n",
-    "#     ax.plot([0, 0], [ylim[0], ylim[1]], color='grey', linestyle='--', linewidth=1)\n",
-    "#     ax.plot([xlim[0], xlim[1]], [0, 0], color='grey', linestyle='--', linewidth=1)\n",
-    "\n",
-    "# score_plot(pca_res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # This function plots the loading plot.\n",
-    "# # Pass original data dataframe and returns of PCA to this function. Optional width, height and margin\n",
-    "# # This function returns the axes of the loading plot\n",
-    "\n",
-    "# def loading_plot_C(data, pca, width=5, height=5, margin=0.5):\n",
-    "\n",
-    "#     fig, ax = plt.subplots(figsize = (width,height))\n",
-    "\n",
-    "#     #Set limits for figure\n",
-    "#     x_min = min(pca.components_[0,:].min(),0)-margin\n",
-    "#     x_max = max(pca.components_[0,:].max(),0)+margin\n",
-    "#     y_min = min(pca.components_[1,:].min(),0)-margin\n",
-    "#     y_max = max(pca.components_[1,:].max(),0)+margin\n",
-    "\n",
-    "#     ax.set_xlim(x_min, x_max)\n",
-    "#     ax.set_ylim(y_min, y_max)\n",
-    "\n",
-    "#     #Scaling factor for text position\n",
-    "#     text_pos = 0.2\n",
-    "\n",
-    "#     for i, v in enumerate(pca.components_.T):\n",
-    "#         ax.arrow(0, 0, v[0], v[1], head_width=0.1, head_length=0.1, linewidth=2, color='red')\n",
-    "#         ax.text(v[0], v[1]+text_pos, data.columns[i], color='black', ha='center', va='center', fontsize=12)\n",
-    "\n",
-    "#     plt.plot([x_min, x_max], [0, 0], color='k', linestyle='--', linewidth=1)\n",
-    "#     plt.plot([0, 0], [y_min, y_max], color='k', linestyle='--', linewidth=1)\n",
-    "#     ax.set_xlabel(\"PC1\", fontsize=14)\n",
-    "#     ax.set_ylabel(\"PC2\", fontsize=14)\n",
-    "#     ax.set_title(\"Loading plot\", fontsize = 14)\n",
-    "\n",
-    "# loading_plot_C(df_numeric, pca)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def loading_plots(pca_res):\n",
-    "    fig, ax = plt.subplots(nrows=pca_res.shape[0], figsize=(8, 8))\n",
-    "    for i in range(pca_res.shape[0]):\n",
+    "def loading_plots(pca_results):\n",
+    "    fig, ax = plt.subplots(nrows=pca_results.shape[0], figsize=(8, 8))\n",
+    "    fig.suptitle(t='Loading Plots', y=0.92, fontsize=14)\n",
+    "    for i in range(pca_results.shape[0]):\n",
     "        ax[i].set(\n",
-    "            xlim=(pca_res.values.min() - 0.2, pca_res.values.max() + 0.2),\n",
+    "            xlim=(pca_results.values.min() - 0.2, pca_results.values.max() + 0.2),\n",
     "            ylim=(-1, 1),\n",
     "            yticks=()\n",
     "        )\n",
-    "        sns.scatterplot(x=pca_res.iloc[i], y=[0] * len(pca_res.iloc[i]), hue=pca_res.columns.values, ax=ax[i], legend=None)\n",
-    "        ax[i].plot([0, 0], [pca_res.values.min() - 0.2, pca_res.values.max() + 0.2], '--', color='grey', linewidth=1)\n",
-    "        for j in range(pca_res.shape[1]):\n",
-    "            ax[i].text(x=pca_res.iloc[i, j] - 0.02, y=0.1 + j / 18, s=pca_res.columns.values[j])\n",
+    "        sns.scatterplot(x=pca_results.iloc[i], y=[0] * len(pca_results.iloc[i]), hue=pca_results.columns.values, ax=ax[i], legend=None)\n",
+    "        ax[i].plot([0, 0], [-1, 1], '--', color='grey', linewidth=1)\n",
+    "        for j in range(pca_results.shape[1]):\n",
+    "            ax[i].text(x=pca_results.iloc[i, j] - 0.02, y=0.1 + j / 18, s=pca_results.columns.values[j])\n",
     "    plt.subplots_adjust(hspace=0.4)\n",
     "\n",
     "loading_plots(pca_results_focused)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# RI is redundant\n",
+    "pca_results_focused['RI']"
    ]
   },
   {
@@ -399,11 +339,25 @@
     "### Interpretation of the Principal Components\n",
     "\n",
     "1.  PC 1:\n",
-    "    *   PC 1 seems to measure the contrast between the amount of silicon and calcium against the amount of potassium, sodium, aluminium and magnesium\n",
-    "    *   Therefore, a higher score for PC 1 means that the food has a greater imbalance of sugar and non-sugar nutrients\n",
-    "    *   A lower score for PC 1 means that the food is very sugary and, possibly, very sweet\n",
+    "    *   PC 1 seems to measure the contrast between the concentrations of silicon oxide (SiO$_{2}$) and calcium oxide (CaO) against the concentrations of potassium oxide (K$_{2}$O), sodium oxide (Na$_{2}$O), aluminium oxide (Al$_{2}$O$_{3}$) and magnesium oxide (MgO)\n",
+    "    *   `Ca` and `Si` have positive loading values while\n",
+    "    *   `K`, `Na`, `Al` and `Mg` have negative loading values\n",
+    "    *   A higher PC 1 score means that the glass object has a higher concentration of silicon oxide and calcium oxide as compared to the rest of the oxides involved\n",
+    "    *   A lower PC 1 score means that the glass object has a lower concentration of silicon oxide and calcium oxide as compared to the rest of the oxides involved\n",
     "2.  PC 2:\n",
-    "    *   PC 2 seems to measure the contrast between the amount of potassium, calcium and aluminium against the amount of sodium, silicon and magnesium"
+    "    *   PC 2 seems to measure the contrast between the concentrations of potassium oxide, calcium oxide and aluminium oxide against the concentrations of magnesium oxide, sodium oxide and silicon oxide\n",
+    "    *   `K`, `Ca` and `Al` have positive loading values while\n",
+    "    *   `Na`, `Si` and `Mg` have negative loading values\n",
+    "    *   A higher PC 2 score means that the glass object has a higher concentration of potassium oxide, calcium oxide and aluminium oxide as compared to the rest of the oxides involved\n",
+    "    *   A lower PC 2 score means that the glass object has a lower concentration of potassium oxide, calcium oxide and aluminium oxide as compared to the rest of the oxides involved\n",
+    "3.  PC 3:\n",
+    "    *   PC 3 seems to measure the contrast between the concentrations of aluminium oxide, sodium oxide and silicon oxide against the concentrations of magnesium oxide, calcium oxide and potassium oxide\n",
+    "    *   `Al`, `Na` and `Si` have positive loading values while\n",
+    "    *   `Mg`, `Ca` and `K` have negative loading values\n",
+    "    *   A higher PC 3 score means that the glass object has a higher concentration of aluminium oxide, sodium oxide and silicon oxide as compared to the rest of the oxides involved\n",
+    "    *   A lower PC 3 score means that the glass object has a lower concentration of aluminium oxide, sodium oxide and silicon oxide as compared to the rest of the oxides involved\n",
+    "\n",
+    "`RI` has a very small absolute loading value for all 3 PCs. This means that `RI` adds little to no information. Thus, it can be considered a redundant variable in this case study."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -412,9 +366,9 @@
    "source": [
     "## Part (c)\n",
     "\n",
-    "The following shows the attributes of a glass object. Which class does it likely belong to?\n",
-    "Explain your answer with the aid of a suitable graph with colour or marker to display\n",
-    "‘Class’ information.\n",
+    "The following shows the attributes of a glass object.<br />\n",
+    "Which class does it likely belong to?<br />\n",
+    "Explain your answer with the aid of a suitable graph with colour or marker to display \"Class\" information.\n",
     "\n",
     "<br />\n",
     "<table style=\"text-align:left;\">\n",
@@ -463,39 +417,75 @@
     "    return score_plot(\n",
     "        append_to_dataframe(df_numeric, np.array(target_vars), df_numeric.columns.values),\n",
     "        pca,\n",
-    "        labels=append_to_series(labels, 'Target'),\n",
-    "        centre=True)\n",
+    "        labels=append_to_series(labels, 'Target'))\n",
     "\n",
-    "score_plot_with_target(pca_results_focused, df_numeric, df['Class'], [1.51641, 13.04, 3.5, 1.28, 73.05, 0.53, 8.6])"
+    "score_plot_with_target(pca, df_numeric, df['Class'], [1.51641, 13.04, 3.5, 1.28, 73.05, 0.53, 8.6])"
    ]
   },
   {
    "source": [
-    "Answer: VehWin\n",
+    "<table style=\"text-align:left;\">\n",
+    "    <tr>\n",
+    "        <th>RI</th>\n",
+    "        <td style=\"padding:0 1em;\">1.51641</td>\n",
+    "        <th>Si</th>\n",
+    "        <td style=\"padding:0 1em;\">73.05</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <th>Na</th>\n",
+    "        <td style=\"padding:0 1em;\">13.04</td>\n",
+    "        <th>K</th>\n",
+    "        <td style=\"padding:0 1em;\">0.53</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <th>Mg</th>\n",
+    "        <td style=\"padding:0 1em;\">3.5</td>\n",
+    "        <th>Ca</th>\n",
+    "        <td style=\"padding:0 1em;\">8.6</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <th>Al</th>\n",
+    "        <td style=\"padding:0 1em;\">1.28</td>\n",
+    "        <th></th>\n",
+    "        <td style=\"padding:0 1em;\"></td>\n",
+    "    </tr>\n",
+    "</table>\n",
     "<br />\n",
-    "Explanation: According to the labelled score plot above, the target can be located in the VehWin (purple) cluster"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "## Part (c)\n",
+    "<br />\n",
     "\n",
-    " Explain how PC3 is advantageous over the first two principal components."
+    "The glass object likely belongs to the `VehWin` (Vehicle Window) class. The given (above) data was  transformed by PCs 1 and 2, and plotted on a 3D labelled score plot, together with the rest of the data points. As the target datum point (light blue) was situated in the `VehWin` (purple) cluster, it is likely that the glass object belongs to the `VehWin` class."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "Answer: PC3 captures the contrast in critical values for PC1 and PC2 scores\n",
-    "<br />\n",
-    "Explanation:\n",
-    "*   `Mg`, `K` and `Ca` have negative loading values for PC3\n",
-    "*   `Mg`, `K` and `Ca` have large absolute loading values for PC1 and PC2\n",
-    "*   For PC1, `K` has the lowest loading value while `Ca` has the highest loading value\n",
-    "*   For PC2, `Mg` has the lowest loading value while `K` has the highest loading value"
+    "## Part (d)\n",
+    "\n",
+    "Explain how PC3 is advantageous over the first two principal components."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PC 1 and PC 2 display the absolute loading values for PC1 and PC2 respectively\n",
+    "# PC 3 is unaltered\n",
+    "loading_plots(pd.concat((pca_results_focused.abs().iloc[:2], pca_results_focused.iloc[2:3])))"
+   ]
+  },
+  {
+   "source": [
+    "PC3 captures the contrast between the more important variables and less important variables of PC1 and PC2. \n",
+    "*   For PC1, `Ca` and `K` have the 2 highest absolute loading values\n",
+    "*   For PC2, `K` and `Mg` have the 2 highest absolute loading values\n",
+    "*   These 3 variables (`Mg`, `K` and `Ca`) have negative loading values for PC3\n",
+    "*   The rest of the variables (`Si`, `Al` and `Na`) have positive loading values for PC3\n",
+    "*   A higher PC3 score means that the glass object scored lower for PCs 1 and 2 ???????"
    ],
    "cell_type": "markdown",
    "metadata": {}
